--- a/manifest.json
+++ b/manifest.json
@@ -12,15 +12,8 @@
   "icons": [
     {
       "src": "./images/favicon/icon.png",
-      "sizes": "192x192",
-      "type": "image/png",
-      "purpose": "any maskable"
-    },
-    {
-      "src": "./images/favicon/icon.png",
-      "sizes": "512x512",
-      "type": "image/png",
-      "purpose": "any maskable"
+      "sizes": "any",
+      "type": "image/png"
     }
   ],
   "categories": ["games", "entertainment"],
