--- a/manifest.json
+++ b/manifest.json
@@ -9,10 +9,20 @@
   "orientation": "landscape",
   "scope": "/",
   "lang": "es",
-  "icons": [],
+  "icons": [
+    {
+      "src": "/images/favicon/icon-1.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "/images/favicon/logo-2.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    }
+  ],
   "categories": [
     "games",
     "entertainment"
-  ],
-  "screenshots": []
+  ]
 }
