--- a/manifest.json
+++ b/manifest.json
@@ -11,12 +11,12 @@
   "lang": "es",
   "icons": [
     {
-      "src": "/images/favicon/icon-1.png",
+      "src": "./images/favicon/icon-1.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "/images/favicon/logo-2.png",
+      "src": "./images/favicon/logo-2.png",
       "sizes": "512x512",
       "type": "image/png"
     }
